--- a/css/main.css
+++ b/css/main.css
@@ -5,34 +5,25 @@ body {
     font-size: 24px;
     color: #095156;
     background-color: #ffffff;
-}
 
-h1 {
-    font-family: 'Roboto Slab', serif;
-    font-size: 60px;
-    font-weight: bold;
-    color: #bdbf09;
-}
-
-h2 {
-    font-size: 48;
 }
 
 h3 {
     font-family: 'Roboto Slab', serif;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 36px;
+    text-align: center;
 }
 
 h4 {
-    font-weight: bold;
+    font-weight: 700;
 }
 
 /***** GRID *****/
 
 .full-width {
     width: 1200px;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .half-width {
@@ -42,8 +33,25 @@ h4 {
 
 /***** HEADER *****/
 
-#header {
+header {
     height: 800px;
+    background: url('../img/hero.png');
+    background-size: cover;
+}
+
+h1 {
+    font-family: 'Roboto Slab', serif;
+    font-size: 60px;
+    font-weight: 700;
+    color: #bdbf09;
+    text-align: center;
+    padding: 300px 0 0 0;
+}
+
+h2 {
+    font-size: 48;
+    text-align: center;
+    font-weight: 400;
 }
 
 /***** WORK *****/
