--- a/css/main.css
+++ b/css/main.css
@@ -5,25 +5,24 @@ body {
     font-size: 24px;
     color: #095156;
     background-color: #ffffff;
-
 }
 
 h3 {
     font-family: 'Roboto Slab', serif;
-    font-weight: 700;
     font-size: 36px;
     text-align: center;
 }
 
-h4 {
+h3, h4 {
     font-weight: 700;
+    text-transform: capitalize;
 }
 
 /***** GRID *****/
 
 .full-width {
     width: 1200px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .half-width {
@@ -45,6 +44,7 @@ h1 {
     font-weight: 700;
     color: #bdbf09;
     text-align: center;
+    text-transform: capitalize;
     padding: 300px 0 0 0;
 }
 
@@ -58,6 +58,10 @@ h2 {
 #work {
     height: 1450px;
     border-width: 1px #b7b7b7;
+}
+
+#work h4 {
+
 }
 
 /***** ABOUT *****/
