--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@ body {
 }
 
 h3 {
-    font-family: 'Roboto Slab', serif;
     font-size: 36px;
     text-align: center;
     padding-top: 25px;
@@ -18,6 +17,15 @@ h3 {
 h3, h4 {
     font-weight: 700;
     text-transform: capitalize;
+}
+
+h3, h5 {
+    font-family: 'Poiret One', cursive;
+}
+
+.full-width img {
+    border: 1px solid  #d3d3d3
+    ;
 }
 
 /***** GRID *****/
@@ -115,8 +123,9 @@ h2 {
 }
 
 #about span {
-
+    font-family: 'Shadows Into Light', cursive;
 }
+
 
 /***** CONTACT *****/
 
