--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 /***** BASE STYLES *****/
 
+/*  font-family: 'Patua One', cursive; -- not used  */
+
+
 body {
     font-family: 'Sanchez', serif;
     font-size: 20px;
@@ -51,19 +54,15 @@ header {
     background-size: cover;
 }
 
-/* alt heading styles
-font-family: 'Yeseva One', cursive;
-*/
-
 h1 {
-    font-family: 'Patua One', cursive;
+    font-family: 'Megrim', cursive;
     font-size: 60px;
-    font-weight: 400;
+    font-weight: 700;
     text-align: center;
     text-transform: capitalize;
-    text-shadow: 1px 1px 8px #b09d7e;
-    color: #404c4e;
-    padding: 320px 0 0 0;
+    text-shadow: 0 1px 3px #1c333c, 0 2px 3px #927f6d, 0 3px 3px #1c333c, 0 4px 3px #927f6d, 0 5px 3px #1c333c;
+    color: ivory;
+    padding: 400px 0 0 0;
     margin: 0 0 10px 0;
 }
 
@@ -71,8 +70,8 @@ h2 {
     font-size: 40px;
     font-weight: 400;
     text-align: center;
-    text-shadow: 3px 3px 8px #b09d7e;
-    color: #404c4e;
+    color: ivory;
+    text-shadow: 0 1px 3px #4e7c72, 0 2px 3px #bf905d, 0 3px 3px #4e7c72, 0 4px 3px #bf905d, 0 5px 3px #4e7c72;
     margin: 10px;
 }
 
