--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,25 @@
 /***** BASE STYLES *****/
 
-/*  font-family: 'Patua One', cursive; -- not used  */
-
+@font-face {
+    font-family: Kraft Nine;
+    src: url('../fonts/KraftNineDEMO.ttf') format('truetype');
+    }
 
 body {
     font-family: 'Sanchez', serif;
     font-size: 20px;
-    color: #c5bfa0;
+    color: #ecede0;
     background-color: #ffffff;
 }
 
 h3 {
     font-family: 'Poiret One', cursive;
     font-size: 36px;
+    font-weight: 700;
     text-align: center;
+    text-transform: capitalize;
     padding: 30px;
     margin: 0;
-}
-
-h3, h4 {
-    font-weight: 700;
-    text-transform: capitalize;
 }
 
 .half-width img {
@@ -55,24 +54,28 @@ header {
 }
 
 h1 {
-    font-family: 'Megrim', cursive;
-    font-size: 60px;
-    font-weight: 700;
+    font-family: 'Kraft Nine';
+    color: #404c4e;
+    font-size: 80px;
+    font-weight: 400;
     text-align: center;
-    text-transform: capitalize;
-    text-shadow: 0 1px 3px #1c333c, 0 2px 3px #927f6d, 0 3px 3px #1c333c, 0 4px 3px #927f6d, 0 5px 3px #1c333c;
-    color: ivory;
-    padding: 400px 0 0 0;
-    margin: 0 0 10px 0;
-}
+    text-shadow: 0 0 40px #c5bfa0, 0 0 80px #fffff0;
+    letter-spacing: 2px;
+    padding-top: 350px;
+    margin: 0;
+    }
 
 h2 {
+    color: #e2e4d8;
     font-size: 40px;
     font-weight: 400;
     text-align: center;
-    color: ivory;
-    text-shadow: 0 1px 3px #4e7c72, 0 2px 3px #bf905d, 0 3px 3px #4e7c72, 0 4px 3px #bf905d, 0 5px 3px #4e7c72;
-    margin: 10px;
+    text-shadow: 0 1px 0 #404c4e, 0 2px 0 #404c4e, 0 3px 1px #404c4e, 0 4px 1px #404c4e, 0 5px 3px #404c4e, 0 6px 3px #404c4e;
+    -webkit-text-stroke-width: .2px;
+    -webkit-text-stroke-color: #404c4e;
+    letter-spacing: 1px;
+    margin: 10px 0;
+    
 }
 
 /***** WORK *****/
@@ -89,18 +92,21 @@ h2 {
 }
 
 #work h4 {
+    font-family: 'Poiret One', cursive;
     font-size: 26px;
-    margin-bottom: 5px;
+    font-weight: 700;
+    margin-bottom: 5px;     
 }
 
 #work h5 {
     font-family: 'Poiret One', cursive;
+    color: #bf905d;
+    letter-spacing: 1px;
     margin: 0;
-    color: #bf905d
 }
 
 #holstee-link {
-    color: #c5bfa0;
+    color: #ecede0;
 }
 
 /***** ABOUT *****/
@@ -117,7 +123,7 @@ h2 {
 }
 
 #about h3, #about h4, #about p, #blusource-link {
-    color: #c5bfa0;
+    color: #ecede0;
 }
 
 #about span {
@@ -130,7 +136,7 @@ h2 {
 
 #contact {
     height: 340px;
-    background-color: #c5bfa0;
+    background-color: #e2e4d8;
 }
 
 #contact h3, #contact h4, #contact h6, #contact p {
@@ -139,7 +145,7 @@ h2 {
     }
 
 #contact h4 {
-    font-family: 'Patua One', cursive;
+    font-family: 'Raleway', cursive;
     font-size: 22px;
     font-weight: 400;
     margin: 25px 0 30px 0;
