--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,98 @@
-/***** BASE STYLES *****/
+/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
+/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
+   html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+  }
+  
+  /*
+   * Remove text-shadow in selection highlight:
+   * https://twitter.com/miketaylr/status/12228805301
+   *
+   * Vendor-prefixed and regular ::selection selectors cannot be combined:
+   * https://stackoverflow.com/a/16982510/7133471
+   *
+   * Customize the background color to match your design.
+   */
+  
+  ::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  ::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  /*
+   * A better looking default horizontal rule
+   */
+  
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+  }
+  
+  /*
+   * Remove the gap between audio, canvas, iframes,
+   * images, videos and the bottom of their containers:
+   * https://github.com/h5bp/html5-boilerplate/issues/440
+   */
+  
+  audio,
+  canvas,
+  iframe,
+  img,
+  svg,
+  video {
+    vertical-align: middle;
+  }
+  
+  /*
+   * Remove default fieldset styles.
+   */
+  
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /*
+   * Allow only vertical resizing of textareas.
+   */
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  /* ==========================================================================
+     Author's custom styles
+     ========================================================================== */
+  
+  /* -------------------- BASE STYLES - ALL PAGES -------------------- */
+/*
+  html {
+    font-size: 16px;
+  }
+*/
 @font-face {
     font-family: Kraft Nine;
     src: url('../fonts/KraftNineDEMO.ttf') format('truetype');
@@ -26,9 +119,7 @@ h3 {
     border: 2px solid #c5bfa0;
     border-radius: 20px;
 }
-
-/***** GRID *****/
-
+  
 .full-width {
     width: 1200px;
     margin: 0 auto;
@@ -45,8 +136,8 @@ h3 {
     float: left;
 }
 
-/***** HEADER *****/
-
+/* -------------------- Header/Footer - ALL PAGES -------------------- */
+  
 header {
     height: 700px;
     background: url('../img/hero.jpg');
@@ -77,9 +168,13 @@ h2 {
     margin: 10px 0;
     
 }
-
-/***** WORK *****/
-
+  
+  /* ==========================================================================
+     Mobile Styles - Homepage
+     ========================================================================== */
+  
+  /* Projects */
+  
 #work {
     height: 1400px;
     background-color: #404c4e;
@@ -107,8 +202,8 @@ h2 {
     color: #ecede0;
 }
 
-/***** ABOUT *****/
-
+  /* About */
+  
 #about {
     height: 550px;
     background-color: #4e7c72;
@@ -130,8 +225,8 @@ h2 {
     color: #bf905d;
 }
 
-/***** CONTACT/FOOTER *****/
-
+  /* Footer */
+  
 #contact {
     height: 340px;
     background-color: #e2e4d8;
@@ -188,3 +283,240 @@ h6 {
     padding: 50px 0 10px 0;
     margin: 0;
 }
+  
+  /* ==========================================================================
+     Mobile Styles - Projects Page
+     ========================================================================== */
+  
+  
+  /* ==========================================================================
+     Mobile Styles - About Page
+     ========================================================================== */
+  
+  
+  /* ==========================================================================
+     Helper classes
+     ========================================================================== */
+  
+  /*
+   * Hide visually and from screen readers
+   */
+  
+  .hidden,
+  [hidden] {
+    display: none !important;
+  }
+  
+  /*
+   * Hide only visually, but have it available for screen readers:
+   * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+   *
+   * 1. For long content, line feeds are not interpreted as spaces and small width
+   *    causes content to wrap 1 word per line:
+   *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+   */
+  
+  .sr-only {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    /* 1 */
+  }
+  
+  /*
+   * Extends the .sr-only class to allow the element
+   * to be focusable when navigated to via the keyboard:
+   * https://www.drupal.org/node/897638
+   */
+  
+  .sr-only.focusable:active,
+  .sr-only.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    white-space: inherit;
+    width: auto;
+  }
+  
+  /*
+   * Hide visually and from screen readers, but maintain layout
+   */
+  
+  .invisible {
+    visibility: hidden;
+  }
+  
+  /*
+   * Clearfix: contain floats
+   *
+   * For modern browsers
+   * 1. The space content is one way to avoid an Opera bug when the
+   *    `contenteditable` attribute is included anywhere else in the document.
+   *    Otherwise it causes space to appear at the top and bottom of elements
+   *    that receive the `clearfix` class.
+   * 2. The use of `table` rather than `block` is only necessary if using
+   *    `:before` to contain the top-margins of child elements.
+   */
+  
+  .clearfix::before,
+  .clearfix::after {
+    content: " ";
+    display: table;
+  }
+  
+  .clearfix::after {
+    clear: both;
+  }
+  
+  /* ==========================================================================
+     EXAMPLE Media Queries for Responsive Design.
+     These examples override the primary ('mobile first') styles.
+     Modify as content requires.
+     ========================================================================== */
+  
+  @media screen and (min-width: 768px) {
+   /**** TABLET STYLES - Homepage ****/
+   
+    /* Base Styles */
+
+  
+    /* Header */
+ 
+  
+    /* Hero Area */
+
+    
+    /* Aside */
+
+
+    /* Features */
+    
+  
+    /* Reviews */
+
+  
+    /* Footer */
+
+  
+   /**** TABLET STYLES - Projects Page ****/
+  
+
+      
+   /**** TABLET STYLES - About Page ****/
+  
+
+  
+  @media screen and (min-width: 1200px) {
+   /**** DESKTOP STYLES - Homepage ****/
+   
+     /* Base Styles */
+
+
+    /* Header */
+
+  
+    /* Hero Area */
+
+  
+    /* Aside */
+
+  
+    /* Features */
+
+  
+    /* Reviews */
+
+  
+   /* Footer */
+
+  
+   /**** DESKTOP STYLES - Projects Page ****/
+
+  
+   /**** DESKTOP STYLES - About Page ****/
+
+  
+  /* ==========================================================================
+     Print styles.
+     Inlined to avoid the additional HTTP request:
+     https://www.phpied.com/delay-loading-your-print-css/
+     ========================================================================== */
+  
+  @media print {
+    *,
+    *::before,
+    *::after {
+      background: #fff !important;
+      color: #000 !important;
+      /* Black prints faster */
+      box-shadow: none !important;
+      text-shadow: none !important;
+    }
+  
+    a,
+    a:visited {
+      text-decoration: underline;
+    }
+  
+    a[href]::after {
+      content: " (" attr(href) ")";
+    }
+  
+    abbr[title]::after {
+      content: " (" attr(title) ")";
+    }
+  
+    /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+    a[href^="#"]::after,
+    a[href^="javascript:"]::after {
+      content: "";
+    }
+  
+    pre {
+      white-space: pre-wrap !important;
+    }
+  
+    pre,
+    blockquote {
+      border: 1px solid #999;
+      page-break-inside: avoid;
+    }
+  
+    /*
+     * Printing Tables:
+     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+    thead {
+      display: table-header-group;
+    }
+  
+    tr,
+    img {
+      page-break-inside: avoid;
+    }
+  
+    p,
+    h2,
+    h3 {
+      orphans: 3;
+      widows: 3;
+    }
+  
+    h2,
+    h3 {
+      page-break-after: avoid;
+    }
+  }
+  
+  
