--- a/css/main.css
+++ b/css/main.css
@@ -11,512 +11,537 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-   html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-  }
-  
-  /*
-   * Remove text-shadow in selection highlight:
-   * https://twitter.com/miketaylr/status/12228805301
-   *
-   * Vendor-prefixed and regular ::selection selectors cannot be combined:
-   * https://stackoverflow.com/a/16982510/7133471
-   *
-   * Customize the background color to match your design.
-   */
-  
-  ::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-  }
-  
-  ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-  }
-  
-  /*
-   * A better looking default horizontal rule
-   */
-  
-  hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-  }
-  
-  /*
-   * Remove the gap between audio, canvas, iframes,
-   * images, videos and the bottom of their containers:
-   * https://github.com/h5bp/html5-boilerplate/issues/440
-   */
-  
-  audio,
-  canvas,
-  iframe,
-  img,
-  svg,
-  video {
-    vertical-align: middle;
-  }
-  
-  /*
-   * Remove default fieldset styles.
-   */
-  
-  fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-  }
-  
-  /*
-   * Allow only vertical resizing of textareas.
-   */
-  
-  textarea {
-    resize: vertical;
-  }
-  
-  /* ==========================================================================
-     Author's custom styles
-     ========================================================================== */
-  
-  /* -------------------- BASE STYLES - ALL PAGES -------------------- */
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+}
+
 /*
-  html {
-    font-size: 16px;
-  }
-*/
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * Vendor-prefixed and regular ::selection selectors cannot be combined:
+ * https://stackoverflow.com/a/16982510/7133471
+ *
+ * Customize the background color to match your design.
+ */
+
+::-moz-selection {
+  background: #b3d4fc;
+  text-shadow: none;
+}
+
+::selection {
+  background: #b3d4fc;
+  text-shadow: none;
+}
+
+/*
+ * A better looking default horizontal rule
+ */
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+/*
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
+ */
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle;
+}
+
+/*
+ * Remove default fieldset styles.
+ */
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+/*
+ * Allow only vertical resizing of textareas.
+ */
+
+textarea {
+  resize: vertical;
+}
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+/* -------------------- BASE STYLES - ALL PAGES -------------------- */
+
+html {
+  font-size: 16px;
+}
+
 @font-face {
-    font-family: Kraft Nine;
-    src: url('../fonts/KraftNineDEMO.ttf') format('truetype');
-    }
+  font-family: Kraft Nine;
+  src: url('../fonts/KraftNineDEMO.ttf') format('truetype');
+  }
 
 body {
     font-family: 'Sanchez', serif;
-    font-size: 20px;
+    font-size: 1em;
     color: #ecede0;
     background-color: #ffffff;
 }
 
-h3 {
-    font-family: 'Poiret One', cursive;
-    font-size: 36px;
-    font-weight: 700;
-    text-align: center;
-    text-transform: capitalize;
-    padding: 30px;
-    margin: 0;
-}
-
-.half-width img {
-    border: 2px solid #c5bfa0;
-    border-radius: 20px;
-}
-  
-.full-width {
-    width: 1200px;
-    margin: 0 auto;
-}
-
-.half-width {
-    width: 500px;
-    float: left;
-    padding: 25px 50px;
-}
-
-.third-width {
-    width: 400px;
-    float: left;
-}
-
-/* -------------------- Header/Footer - ALL PAGES -------------------- */
-  
-header {
-    height: 700px;
-    background: url('../img/hero.jpg');
-    background-size: cover;
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
 }
 
 h1 {
-    font-family: 'Kraft Nine';
-    color: #404c4e;
-    font-size: 80px;
-    font-weight: 400;
-    text-align: center;
-    text-shadow: 0 0 40px #c5bfa0, 0 0 80px #fffff0;
-    letter-spacing: 2px;
-    padding-top: 350px;
-    margin: 0;
-    }
+  font-family: 'Kraft Nine';
+  font-size: 5em;
+  font-weight: 400;
+  text-align: center;
+}
 
 h2 {
-    color: #e2e4d8;
-    font-size: 40px;
-    font-weight: 400;
-    text-align: center;
-    text-shadow: 0 1px 0 #404c4e, 0 2px 0 #404c4e, 0 3px 1px #404c4e, 0 4px 1px #404c4e, 0 5px 3px #404c4e, 0 6px 3px #404c4e;
-    -webkit-text-stroke-width: .2px;
-    -webkit-text-stroke-color: #404c4e;
-    letter-spacing: 1px;
-    margin: 10px 0;
-    
-}
-  
-  /* ==========================================================================
-     Mobile Styles - Homepage
-     ========================================================================== */
-  
-  /* Projects */
-  
-#work {
-    height: 1400px;
-    background-color: #404c4e;
+  font-size: 2em;
+  font-weight: 400;
+  text-align: center;
+  margin: 0 0 40px 0;
 }
 
-#jubilee, #holstee {
-    clear: both;
+
+h3,
+h4 {
+  font-family: 'Poiret One', cursive;
+  margin: 0;
 }
 
-#work h4 {
-    font-family: 'Poiret One', cursive;
-    font-size: 26px;
-    font-weight: 700;
-    margin-bottom: 5px;     
+h3 {
+  font-size: 1.5em;
+  font-weight: 700;
+  text-transform: capitalize;
+  margin-top: 20px;
 }
 
-#work h5 {
-    font-family: 'Poiret One', cursive;
-    color: #bf905d;
-    letter-spacing: 1px;
-    margin: 0;
+h4 {
+  margin: 5px 0 10px 0;
 }
 
-#holstee-link {
-    color: #ecede0;
+p {
+  font-size: .875em;
 }
 
-  /* About */
-  
-#about {
-    height: 550px;
-    background-color: #4e7c72;
+ul, 
+ol {
+ list-style-type: none;
+}
+ 
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+ 
+address {
+  font-style: normal;
 }
 
-#about #headshot {
-    height: 350px;
-    display: block;
-    margin: auto;
+img {
+  width: 100%;
 }
 
-#about h3, #about h4, #about p, #blusource-link {
-    color: #ecede0;
+figure {
+  margin: 0;
+} 
+
+/* -------------------- Header/Footer - ALL PAGES -------------------- */
+
+header,
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
-#about span {
-    font-size: 24px;
-    font-family: 'Shadows Into Light', cursive;
-    color: #bf905d;
+header {
+  background: url('../img/hero.jpg') center no-repeat #333;
+  background-size: cover;
 }
 
-  /* Footer */
-  
-#contact {
-    height: 340px;
-    background-color: #e2e4d8;
+header h1 {
+  color: #404c4e;
+  text-shadow: 0 0 40px #c5bfa0, 0 0 80px #fffff0;
+  letter-spacing: 2px;
+  padding-top: 350px;
+  margin: 0;
 }
 
-#contact h3, #contact h4, #contact h6, #contact p {
-    color: #404c4e;
-    text-align: center;
-    }
+header h2 {
+  color: #e2e4d8;
+  text-shadow: 0 1px 0 #404c4e, 0 2px 0 #404c4e, 0 3px 1px #404c4e, 0 4px 1px #404c4e, 0 5px 3px #404c4e, 0 6px 3px #404c4e;
+  -webkit-text-stroke-width: .2px;
+  -webkit-text-stroke-color: #404c4e;
+  letter-spacing: 1px;
+  margin: 10px 0;
+}
 
-#contact h4 {
-    font-family: 'Raleway', cursive;
-    font-size: 22px;
-    font-weight: 400;
-    margin: 25px 0 30px 0;
+footer {
+  background-color: #e2e4d8;
+}
+
+#contact h2, #contact h3, .copyright, #contact p {
+  color: #404c4e;
+  text-align: center;
+  }
+
+#contact h3 {
+  font-family: 'Raleway', cursive;
+  font-size: 1.375em;
+  font-weight: 400;
+  margin: 25px 0 30px 0;
 }
 
 #contact p {
-    font-size: 18px;
+  font-size: 1.125em;
 }
 
 #contact a {
-    text-decoration: none;
-    color: #404c4e;
+  text-decoration: none;
+  color: #404c4e;
 }
 
 #social-media-icons {
-    text-align: center;
-    list-style: none;
+  text-align: center;
+  list-style: none;
 }
 
 #contact ul {
-    padding: 0;
+  padding: 0;
 }
 
 #contact ul li {
-    display: inline-block;
+  display: flex;
 }
 
 #contact ul img {
-    font-size: 32px;
-    margin: 0 25px;
+  font-size: 2em;
+  margin: 0 25px;
 }
 
-#contact #github, #linkedin {
-    height: 50px;
+footer .copyright {
+  font-family: 'Raleway', sans-serif;
+  font-size: .875em;
+  font-weight: 400;
+  padding: 50px 0 10px 0;
+  margin: 0;
 }
 
-h6 {
-    font-family: 'Raleway', sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    clear: both;
-    padding: 50px 0 10px 0;
-    margin: 0;
+/* ==========================================================================
+   Mobile Styles - Homepage
+   ========================================================================== */
+
+/* Projects */
+
+#projects,
+#about {
+  display: flex;
+  justify-content: center;
+  align-items: center; /*needed?*/
+  flex-flow: row wrap;
+}
+
+#projects {
+  background-color: #404c4e;
+}
+
+#projects article {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+#projects .project-image {
+  margin: 0;
+}
+
+.project-description h3 {
+  font-size: 1.625em;
+  font-weight: 700;
+}
+
+.project-description h4 {
+  color: #bf905d;
+  letter-spacing: 1px;
+}
+
+#holstee-link {
+  color: #ecede0;
+}
+
+/* About */
+
+#about {
+  background-color: #4e7c72;
+}
+
+#about figure {
+
+}
+
+#about h2, #about h3, #about p, #blusource-link {
+  color: #ecede0;
+}
+
+#about span {
+  font-size: 1.5em;
+  font-family: 'Shadows Into Light', cursive;
+  color: #bf905d;
+}
+
+/* ==========================================================================
+   Mobile Styles - Projects Page
+   ========================================================================== */
+
+
+/* ==========================================================================
+   Mobile Styles - About Page
+   ========================================================================== */
+
+
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+  
+/*
+ * Hide visually and from screen readers
+ */
+
+.hidden,
+[hidden] {
+  display: none !important;
+}
+
+/*
+ * Hide only visually, but have it available for screen readers:
+ * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ *
+ * 1. For long content, line feeds are not interpreted as spaces and small width
+ *    causes content to wrap 1 word per line:
+ *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+ */
+
+.sr-only {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  /* 1 */
 }
   
-  /* ==========================================================================
-     Mobile Styles - Projects Page
-     ========================================================================== */
+/*
+ * Extends the .sr-only class to allow the element
+ * to be focusable when navigated to via the keyboard:
+ * https://www.drupal.org/node/897638
+ */
+
+.sr-only.focusable:active,
+.sr-only.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  white-space: inherit;
+  width: auto;
+}
+
+/*
+ * Hide visually and from screen readers, but maintain layout
+ */
+
+.invisible {
+  visibility: hidden;
+}
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+
+.clearfix::before,
+.clearfix::after {
+  content: " ";
+  display: table;
+}
+
+.clearfix::after {
+  clear: both;
+}
+
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
   
+@media screen and (min-width: 768px) {
+ /**** TABLET STYLES - Homepage ****/
   
-  /* ==========================================================================
-     Mobile Styles - About Page
-     ========================================================================== */
-  
-  
-  /* ==========================================================================
-     Helper classes
-     ========================================================================== */
-  
-  /*
-   * Hide visually and from screen readers
-   */
-  
-  .hidden,
-  [hidden] {
-    display: none !important;
-  }
-  
-  /*
-   * Hide only visually, but have it available for screen readers:
-   * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
-   *
-   * 1. For long content, line feeds are not interpreted as spaces and small width
-   *    causes content to wrap 1 word per line:
-   *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
-   */
-  
-  .sr-only {
-    border: 0;
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    /* 1 */
-  }
-  
-  /*
-   * Extends the .sr-only class to allow the element
-   * to be focusable when navigated to via the keyboard:
-   * https://www.drupal.org/node/897638
-   */
-  
-  .sr-only.focusable:active,
-  .sr-only.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    white-space: inherit;
-    width: auto;
-  }
-  
-  /*
-   * Hide visually and from screen readers, but maintain layout
-   */
-  
-  .invisible {
-    visibility: hidden;
-  }
-  
-  /*
-   * Clearfix: contain floats
-   *
-   * For modern browsers
-   * 1. The space content is one way to avoid an Opera bug when the
-   *    `contenteditable` attribute is included anywhere else in the document.
-   *    Otherwise it causes space to appear at the top and bottom of elements
-   *    that receive the `clearfix` class.
-   * 2. The use of `table` rather than `block` is only necessary if using
-   *    `:before` to contain the top-margins of child elements.
-   */
-  
-  .clearfix::before,
-  .clearfix::after {
-    content: " ";
-    display: table;
-  }
-  
-  .clearfix::after {
-    clear: both;
-  }
-  
-  /* ==========================================================================
-     EXAMPLE Media Queries for Responsive Design.
-     These examples override the primary ('mobile first') styles.
-     Modify as content requires.
-     ========================================================================== */
-  
-  @media screen and (min-width: 768px) {
-   /**** TABLET STYLES - Homepage ****/
-   
-    /* Base Styles */
+  /* Base Styles */
+
+
+  /* Header */
+
+
+  /* Hero Area */
 
   
-    /* Header */
- 
+  /* Aside */
+
+
+  /* Features */
   
-    /* Hero Area */
+
+  /* Reviews */
+
+
+  /* Footer */
+
+
+  /**** TABLET STYLES - Projects Page ****/
 
     
-    /* Aside */
+  /**** TABLET STYLES - About Page ****/
 
 
-    /* Features */
-    
-  
-    /* Reviews */
+@media screen and (min-width: 1200px) {
+ /**** DESKTOP STYLES - Homepage ****/
 
-  
-    /* Footer */
-
-  
-   /**** TABLET STYLES - Projects Page ****/
-  
-
-      
-   /**** TABLET STYLES - About Page ****/
-  
-
-  
-  @media screen and (min-width: 1200px) {
-   /**** DESKTOP STYLES - Homepage ****/
-   
-     /* Base Styles */
+  /* Base Styles */
 
 
-    /* Header */
+  /* Header */
+
+
+  /* Hero Area */
+
+
+  /* Aside */
+
+
+  /* Features */
+
+
+  /* Reviews */
+
+
+  /* Footer */
+
+
+ /**** DESKTOP STYLES - Projects Page ****/
+
+
+ /**** DESKTOP STYLES - About Page ****/
 
   
-    /* Hero Area */
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   https://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
 
-  
-    /* Aside */
+@media print {
+  *,
+  *::before,
+  *::after {
+    background: #fff !important;
+    color: #000 !important;
+    /* Black prints faster */
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
 
-  
-    /* Features */
-
-  
-    /* Reviews */
-
-  
-   /* Footer */
-
-  
-   /**** DESKTOP STYLES - Projects Page ****/
-
-  
-   /**** DESKTOP STYLES - About Page ****/
-
-  
-  /* ==========================================================================
-     Print styles.
-     Inlined to avoid the additional HTTP request:
-     https://www.phpied.com/delay-loading-your-print-css/
-     ========================================================================== */
-  
-  @media print {
-    *,
-    *::before,
-    *::after {
-      background: #fff !important;
-      color: #000 !important;
-      /* Black prints faster */
-      box-shadow: none !important;
-      text-shadow: none !important;
-    }
-  
-    a,
-    a:visited {
-      text-decoration: underline;
-    }
-  
-    a[href]::after {
-      content: " (" attr(href) ")";
-    }
-  
-    abbr[title]::after {
-      content: " (" attr(title) ")";
-    }
-  
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-    a[href^="#"]::after,
-    a[href^="javascript:"]::after {
-      content: "";
-    }
-  
-    pre {
-      white-space: pre-wrap !important;
-    }
-  
-    pre,
-    blockquote {
-      border: 1px solid #999;
-      page-break-inside: avoid;
-    }
-  
-    /*
-     * Printing Tables:
-     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-    thead {
-      display: table-header-group;
-    }
-  
-    tr,
-    img {
-      page-break-inside: avoid;
-    }
-  
-    p,
-    h2,
-    h3 {
-      orphans: 3;
-      widows: 3;
-    }
-  
-    h2,
-    h3 {
-      page-break-after: avoid;
-    }
+  a,
+  a:visited {
+    text-decoration: underline;
   }
   
+  a[href]::after {
+    content: " (" attr(href) ")";
+  }
+
+  abbr[title]::after {
+    content: " (" attr(title) ")";
+  }
+
+  /*
+   * Don't show links that are fragment identifiers,
+   * or use the `javascript:` pseudo protocol
+   */
+  a[href^="#"]::after,
+  a[href^="javascript:"]::after {
+    content: "";
+  }
+
+  pre {
+    white-space: pre-wrap !important;
+  }
+
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+
+  /*
+   * Printing Tables:
+   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+   */
+  thead {
+    display: table-header-group;
+  }
   
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+} 
