--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ h4 {
 
 p {
   font-size: .875em;
+  line-height: 1.4;
   margin: 0;
 }
 
@@ -215,11 +216,11 @@ footer h3 {
   font-family: 'Raleway', cursive;
   font-size: 1.375em;
   font-weight: 700;
-  margin: 30px 0 15px 0;
+  margin: 40px 0 15px 0;
 }
 
 footer p {
-  font-size: 1.125em;
+  font-size: 1em;
 }
 
 footer a {
@@ -240,12 +241,11 @@ footer .social-icons p {
 }
 
 footer .social-icons p i {
-	font-size: 3em;
+	font-size: 2.75em;
 }
 
 footer .copyright {
   font-family: 'Raleway', sans-serif;
-  font-size: .875em;
   font-weight: 400;
   margin-bottom: 10px;
   width: 90%;
@@ -273,7 +273,7 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  margin: 30px 0 0 0;
+  margin: 50px 0 0 0;
 }
 
 .projects .project-image {
@@ -311,7 +311,7 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  margin: 30px 0 0 0;
+  margin: 40px 0 0 0;
 }
 
 .about figure {
@@ -319,8 +319,8 @@ footer .copyright {
 }
 
 .about h4 {
-  margin: 20px 0 5px 0;
-  line-height: 22px;
+  font-size: 1.25em;
+  margin: 20px 0;
 }
 
 .about p {
@@ -328,7 +328,7 @@ footer .copyright {
 }
 
 .about span {
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-family: 'Shadows Into Light', cursive;
   color: #bf905d;
 }
@@ -437,6 +437,11 @@ footer .copyright {
   /* Base Styles */
   .content-wrapper {
     max-width: 640px;
+    margin: 70px;
+    }
+
+  h2 {
+    font-size: 2.5em;
   }
 
   /* Header */
@@ -460,10 +465,7 @@ footer .copyright {
 
   .projects h3 {
     margin: 0;
-  }
-
-  .projects p {
-    line-height: 22px;
+    font-size: 1.375em;
   }
 
   /* About */
@@ -483,18 +485,16 @@ footer .copyright {
   }
 
   .about h4 {
-    font-size: 1.25em;
     margin: 0;
   }
 
   .about p {
     font-size: 1em;
     margin-top: 20px;
-    line-height: 24px;
+    padding-right: 30px;
   }
 
   /* Footer */
-
   footer .content-wrapper {
     width: 100%;
   }
@@ -516,12 +516,7 @@ footer .copyright {
   }
 
   footer h3 {
-    font-size: 1.25em;
     margin-top: 20px;
-  }
-
-  footer p {
-    font-size: 1em;
   }
 
   /**** TABLET STYLES - Projects Page ****/
@@ -534,19 +529,59 @@ footer .copyright {
  /**** DESKTOP STYLES - Homepage ****/
 
   /* Base Styles */
+  .content-wrapper {
+    max-width: 960px;
+  }
 
+  h2 {
+    font-size: 3em;
+  }
 
   /* Header */
+  header h1 {
+    font-size: 6em;
+  }
 
+  header p {
+    font-size: 3em;
+  }
 
   /* Projects */
-
-
-  /* About */
+  .projects h3 {
+    font-size: 2em;
+  }
   
+  .projects h4 {
+    font-size: 1.375em;
+  }
+
+  .projects p {
+    font-size: 1.25em;
+    line-height: 1.5;
+  }
+  
+  /* About */
+  .about .headshot {
+    width: 30%;
+  }
+  
+  .about .about-description {
+    width: 65%;
+  }
+
+  .about h4 {
+    font-size: 1.5em;
+  }
+
+  .about p {
+    font-size: 1.375em;
+    padding: 0;
+  }
 
   /* Footer */
-
+  footer h2{
+    margin-bottom: 20px;
+  }
 
  /**** DESKTOP STYLES - Projects Page ****/
 
