--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,10 @@ footer a {
   text-decoration: none;
   color: #404c4e;
 }
+footer a strong {
+  text-decoration: underline;
 
+}
 footer .social-icons {
   display: flex;
   justify-content: space-around;
