--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,23 @@ box-shadow: 0.2rem 0.2rem 0.5rem #555;
 
 }
 /* ----- End of Navbar ----- */
+
+/* ----- Section 2 ----- */
+.section-2 {
+  width: 100%;
+  height: 100%;
+  padding: 15rem 0 10rem 0;
+  background-color: #fff;
+}
+
+.section-2-heading {
+  font-size: 5rem;
+  color: #333;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  margin-bottom: 15rem;
+  border-bottom: 0.3rem solid #333;
+  text-shadow: 0.2rem 0.2rem 0.5rem #555;
+}
+
+/* ----- End of SEction 2 ----- */
