--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 html {
   font-size: 62.5%; /* setting default font size to 10px */
+  scroll-behavior: smooth;
 }
 
 .center {
@@ -50,7 +51,7 @@ html {
   color: #fff;
   background-color: #e41c6f;
   padding: 0 3rem;
-  margin-bottom: 5rem;
+  margin: 0 0 5rem 0;
   text-transform: uppercase;
   letter-spacing: 1rem;
   border-bottom: 0.3rem solid #fff;
@@ -97,7 +98,6 @@ width: 100%;
 height: 4rem;
 background-color: #e41c6f;
 box-shadow: 0.2rem 0.2rem 0.5rem #555;
-position: -webkit-sticky;
 position: sticky;
 top: 0;
 z-index: 15;
@@ -112,6 +112,10 @@ z-index: 15;
   letter-spacing: 0.3rem;
   position: relative;
   transition: color 0.2s;
+}
+
+.change.navbar-link {
+  color: #fff;
 }
 
 .navbar-link:hover {
@@ -129,6 +133,10 @@ z-index: 15;
   transition: width 0.2s;
 }
 
+.change.navbar-link::before { 
+  width: 130%;
+}
+  
 .navbar-link:hover::before { 
   width: 130%;
 }
